Apply some IDEA suggestions